--- a/views/index_.mustache
+++ b/views/index_.mustache
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" ref="stylesheet" href="style.css" />
+    <link rel="stylesheet" ref="stylesheet" href="/style/style.css" />
     <title>PASo</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
           <div class="grid-col-2">
             <div class="margin-top form-inputs">
               <div>
-                <img class="icons-img" src="icons8-building-50.png" />
+                <img class="icons-img" src="img/icons8-building-50.png" />
                 <label for="block" class="info-labels"> Block </label>
               </div>
               <input
@@ -40,7 +40,7 @@
             </div>
             <div class="margin-top form-inputs">
               <div>
-                <img class="icons-img" src="icons8-building-50.png" />
+                <img class="icons-img" src="img/icons8-building-50.png" />
                 <label for="dorm-number" class="info-labels">
                   Dorm number
                 </label>
@@ -56,7 +56,7 @@
             </div>
             <div class="margin-top form-inputs">
               <div>
-                <img class="icons-img" src="icons8-building-50.png" />
+                <img class="icons-img" src="img/icons8-building-50.png" />
                 <label for="stdents" class="info-labels">
                   Number of students</label
                 >
@@ -72,7 +72,7 @@
             </div>
             <div class="margin-top form-inputs">
               <div>
-                <img class="icons-img" src="icons8-building-50.png" />
+                <img class="icons-img" src="img/icons8-building-50.png" />
                 <label for="mattress" class="info-labels"> Mattress </label>
               </div>
               <input
